Mobile dropdown menu z-index fix

--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -147,6 +147,7 @@
         color: var(--foreground);
         border-radius: 5px;
         box-shadow: 0px 1px 2px 0px gray;
+        z-index: 5;
     }
 
     .moodle-menu-mob > div {
